Create navmesh meta data generator

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -72,15 +72,18 @@
     <Compile Include="Assets\Scripts\Controllers\PlayerController.cs" />
     <Compile Include="Assets\Scripts\Debug\DebugNavmeshRenderer.cs" />
     <Compile Include="Assets\Scripts\Demo\AdvancedNavmesh.cs" />
+    <Compile Include="Assets\Scripts\Demo\NavmeshCoverDataGenerator.cs" />
     <Compile Include="Assets\Scripts\General\Data Structures\BinaryHeap.cs" />
     <Compile Include="Assets\Scripts\General\Data Structures\Octree\AABB.cs" />
     <Compile Include="Assets\Scripts\General\Data Structures\Octree\IAABBBoundedObject.cs" />
+    <Compile Include="Assets\Scripts\General\Data Structures\Octree\IOctreeReadonly.cs" />
     <Compile Include="Assets\Scripts\General\Data Structures\Octree\Octree.cs" />
     <Compile Include="Assets\Scripts\General\Data Structures\Octree\OctreeNode.cs" />
     <Compile Include="Assets\Scripts\General\ObserverPatternClasses.cs" />
     <Compile Include="Assets\Scripts\General\SingletonMonobehaviour.cs" />
     <Compile Include="Assets\Scripts\General\StairSmoother.cs" />
     <Compile Include="Assets\Scripts\Pathfinding\AdvancedNavmeshBase.cs" />
+    <Compile Include="Assets\Scripts\Pathfinding\NavmeshMetaDataProviderBase.cs" />
     <Compile Include="Assets\Scripts\Pathfinding\NavmeshTriangle.cs" />
     <Compile Include="Assets\Scripts\SimpleCameraController.cs" />
     <Compile Include="Assets\Scripts\Utils\CompletableCoroutine.cs" />
